src/test/resources/failing/fail71.pnd
template Foo<A> {
    P(x) : int
    @type Animal
    Baz(x, y) : int, A.Dog
}
Foo<_> as F1
